--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,13 @@
   <head>
     <title>Presentation</title>
     <meta charset='utf-8'>
-    <script src='/slides.js'></script>
-    <!--
-    <script src='http://html5slides.googlecode.com/svn/trunk/slides.js'></script>
-    -->
+    <script src='/html5slides/slides.js'></script>
     <style>
     </style>
   </head>
   
   <body style='display:none;'>
-    <section class='slides layout-regular template-default'>
+    <section class='slides layout-regular template-ishikawa'>
     <%- slides %>
     </section>
   </body>
